Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.2
-
-
7c218d20a (dev), 65a1e7170 (6.8), a9840e9d7 (6.7)
Description
User informed that running windeployqt with " --no-qmltoolingsettingsInternal" generates "Unknown option 'no-qmltoolingsettingsInternal'" error. Apparently this is a bug and as a workaround would be to leave out the internal suffix " --no-qmltoolingsettings".
Attachments
For Gerrit Dashboard: QTBUG-122774 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
543445,5 | Windeployqt: fix exclusion option for Internal modules | dev | qt/qtbase | Status: MERGED | +2 | 0 |
582910,2 | Windeployqt: fix exclusion option for Internal modules | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
583099,2 | Windeployqt: fix exclusion option for Internal modules | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |